# Food-ordering-console-app

./: README.md
 ordering food/: CMakeLists.txt  display_menu.c  display_menu.h  display_order.c  display_order.h  input_from_customer.c  input_from_customer.h  loading_data.c  loading_data.h  main.c
ordering food-lab 7 extras/: display_order.h  input_from_customer.c  input_from_customer.h  loading_data.c  loading_data.h  main.c
ordering food-lab 9/: CMakeLists.txt  display_menu.c  display_menu.h  display_order.c  display_order.h  drinks.c  drinks.h  foods.c  foods.h  input_from_customer.c  input_from_customer.h  loading_data.c  loading_data.h  main.c  types.c  types.h
ordering food-load from file/: CMakeLists.txt  accounts.txt  data.txt  display_menu.c  display_menu.h  display_order.c  input_from_customer.c  input_from_customer.h  loading_data.c  loading_data.h  main.c
